# linuxserveradmin

./: .gitignore  apachehttpd.sh  backuper.sh  backupfiles.sh  compilephp.sh  createnginxhost.sh  firstsetup.sh  generatedkimkey.sh  generatessl.sh  installmailserver.sh  mailaccount.sh  nginxcontrol.sh  serveradmin.sh  sslvalidator.sh
IOServerManagerUtils/: .cproject  .project  Makefile.am  Makefile.in  NEWS  README  config.status  configure  configure.ac
IOServerManagerUtils/src/: IOServerManagerUtils.c  IOServerManagerUtils.out  IOServerManagerUtils_pcx.h  IO_ArgumentParser.c  IO_ArgumentParser.h  Makefile.am  Makefile.in  ServerManagerUtils_Config.h.in
conf.d/: mail.conf
ini_files/fail2ban/: jail.conf  ufw-dovecot.conf  ufw-mysqld.conf  ufw-nginx.conf  ufw-ssh.conf  ufw-webmin.conf
ini_files/mail/: smtptest.txt
ini_files/mail/dkim/: opendkim.conf
ini_files/mail/dovecot/: 10-logging.conf  10-master.conf  10-ssl.conf  dovecot-sql.conf.ext
ini_files/mail/postfix/: main.cf  master.cf  mysql-virtual-alias-maps.cf  mysql-virtual-email.cf  mysql-virtual-mailbox-domains.cf  mysql-virtual-mailbox-maps.cf
ini_files/php/: php-fpm.conf  php.ini
ini_files/pptpd/: chap-secrets  pptpd-options  pptpd.conf  sysctl.conf  ufw_before.rules  ufw_settings
ini_files/ssh/: ssh_config  sshd_config  sudousers  ufw
